Fixing Event Info Card on mobile

--- a/website_frontend/src/components/EventInfoCard/EventInfoCard.module.css
+++ b/website_frontend/src/components/EventInfoCard/EventInfoCard.module.css
@@ -27,7 +27,7 @@
     padding: 0.5rem;
     font-weight: bold;
     font-size: larger;
-    margin: 0 auto;
+    /* margin: 0 auto; */
 }
 
 .title {
